# office365-audit-log-collector

./: pyproject.toml
office365_audit_log_collector/: AuditLogCollector.py  AuditLogSubscriber.py
